--- a/pycurvis/test.ipynb
+++ b/pycurvis/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -20,92 +20,17 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from tqdm import tqdm, trange\n",
-    "from data.data import SphericalDataset, stand_norm\n",
+    "from data.data import SphericalDataset, SphericalBlockDataset, stand_norm\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "from sklearn.pipeline import make_pipeline, Pipeline\n",
     "from cfg.configs import Config\n",
     "from util.utils import count_parameters\n",
+    "from network.network import MLP\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "config = Config(\"nn.yaml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.makedirs(\"tmp\", exist_ok = True) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = torch.Tensor([1,2,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 2., 1.], dtype=float32)"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.save({1: 10}, \"tmp/tmp\", )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlp = config.get_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "90179"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_parameters(mlp)"
+    "config = Config(\"nn_block.yaml\")"
    ]
   },
   {
